# vertical_jump_pose_estimation

./: LICENSE  README.md  pyproject.toml
vertical_jump_pose_estimation/examples/: helpers.py  inference_image.py  inference_video.py
