[project]
name = "vertical-jump-pose-estimation"
version = "0.1.0"
description = ""
authors = [
    {name = "Ziyue Wang"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics (>=8.3.196,<9.0.0)",
    "imutils (>=0.5.4,<0.6.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
